// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Reaction/> snapshot match all available animations 1`] = `
<ReactionKeys>
  <div>
    <p
      key="smile"
    >
      smile
    </p>
    <p
      key="sad"
    >
      sad
    </p>
    <p
      key="wow"
    >
      wow
    </p>
    <p
      key="haha"
    >
      haha
    </p>
    <p
      key="celebrate"
    >
      celebrate
    </p>
    <p
      key="heart"
    >
      heart
    </p>
    <p
      key="fire"
    >
      fire
    </p>
    <p
      key="speed_up"
    >
      speed_up
    </p>
    <p
      key="slow_down"
    >
      slow_down
    </p>
    <p
      key="clap_yellow"
    >
      clap_yellow
    </p>
    <p
      key="clap_light"
    >
      clap_light
    </p>
    <p
      key="clap_medium_light"
    >
      clap_medium_light
    </p>
    <p
      key="clap_medium"
    >
      clap_medium
    </p>
    <p
      key="clap_medium_dark"
    >
      clap_medium_dark
    </p>
    <p
      key="clap_dark"
    >
      clap_dark
    </p>
    <p
      key="thumb_up_yellow"
    >
      thumb_up_yellow
    </p>
    <p
      key="thumb_up_light"
    >
      thumb_up_light
    </p>
    <p
      key="thumb_up_medium_light"
    >
      thumb_up_medium_light
    </p>
    <p
      key="thumb_up_medium"
    >
      thumb_up_medium
    </p>
    <p
      key="thumb_up_medium_dark"
    >
      thumb_up_medium_dark
    </p>
    <p
      key="thumb_up_dark"
    >
      thumb_up_dark
    </p>
    <p
      key="thumb_down_yellow"
    >
      thumb_down_yellow
    </p>
    <p
      key="thumb_down_light"
    >
      thumb_down_light
    </p>
    <p
      key="thumb_down_medium_light"
    >
      thumb_down_medium_light
    </p>
    <p
      key="thumb_down_medium"
    >
      thumb_down_medium
    </p>
    <p
      key="thumb_down_medium_dark"
    >
      thumb_down_medium_dark
    </p>
    <p
      key="thumb_down_dark"
    >
      thumb_down_dark
    </p>
    <p
      key="prayer_yellow"
    >
      prayer_yellow
    </p>
    <p
      key="prayer_light"
    >
      prayer_light
    </p>
    <p
      key="prayer_medium_light"
    >
      prayer_medium_light
    </p>
    <p
      key="prayer_medium"
    >
      prayer_medium
    </p>
    <p
      key="prayer_medium_dark"
    >
      prayer_medium_dark
    </p>
    <p
      key="prayer_dark"
    >
      prayer_dark
    </p>
    <p
      key="raise_hand_yellow"
    >
      raise_hand_yellow
    </p>
    <p
      key="raise_hand_light"
    >
      raise_hand_light
    </p>
    <p
      key="raise_hand_medium_light"
    >
      raise_hand_medium_light
    </p>
    <p
      key="raise_hand_medium"
    >
      raise_hand_medium
    </p>
    <p
      key="raise_hand_medium_dark"
    >
      raise_hand_medium_dark
    </p>
    <p
      key="raise_hand_dark"
    >
      raise_hand_dark
    </p>
    <p
      key="on_video_smile"
    >
      on_video_smile
    </p>
    <p
      key="on_video_sad"
    >
      on_video_sad
    </p>
    <p
      key="on_video_wow"
    >
      on_video_wow
    </p>
    <p
      key="on_video_haha"
    >
      on_video_haha
    </p>
    <p
      key="on_video_celebrate"
    >
      on_video_celebrate
    </p>
    <p
      key="on_video_heart"
    >
      on_video_heart
    </p>
    <p
      key="on_video_fire"
    >
      on_video_fire
    </p>
    <p
      key="on_video_speed_up"
    >
      on_video_speed_up
    </p>
    <p
      key="on_video_slow_down"
    >
      on_video_slow_down
    </p>
    <p
      key="on_video_clap_yellow"
    >
      on_video_clap_yellow
    </p>
    <p
      key="on_video_clap_light"
    >
      on_video_clap_light
    </p>
    <p
      key="on_video_clap_medium_light"
    >
      on_video_clap_medium_light
    </p>
    <p
      key="on_video_clap_medium"
    >
      on_video_clap_medium
    </p>
    <p
      key="on_video_clap_medium_dark"
    >
      on_video_clap_medium_dark
    </p>
    <p
      key="on_video_clap_dark"
    >
      on_video_clap_dark
    </p>
    <p
      key="on_video_thumb_up_yellow"
    >
      on_video_thumb_up_yellow
    </p>
    <p
      key="on_video_thumb_up_light"
    >
      on_video_thumb_up_light
    </p>
    <p
      key="on_video_thumb_up_medium_light"
    >
      on_video_thumb_up_medium_light
    </p>
    <p
      key="on_video_thumb_up_medium"
    >
      on_video_thumb_up_medium
    </p>
    <p
      key="on_video_thumb_up_medium_dark"
    >
      on_video_thumb_up_medium_dark
    </p>
    <p
      key="on_video_thumb_up_dark"
    >
      on_video_thumb_up_dark
    </p>
    <p
      key="on_video_thumb_down_yellow"
    >
      on_video_thumb_down_yellow
    </p>
    <p
      key="on_video_thumb_down_light"
    >
      on_video_thumb_down_light
    </p>
    <p
      key="on_video_thumb_down_medium_light"
    >
      on_video_thumb_down_medium_light
    </p>
    <p
      key="on_video_thumb_down_medium"
    >
      on_video_thumb_down_medium
    </p>
    <p
      key="on_video_thumb_down_medium_dark"
    >
      on_video_thumb_down_medium_dark
    </p>
    <p
      key="on_video_thumb_down_dark"
    >
      on_video_thumb_down_dark
    </p>
    <p
      key="on_video_prayer_yellow"
    >
      on_video_prayer_yellow
    </p>
    <p
      key="on_video_prayer_light"
    >
      on_video_prayer_light
    </p>
    <p
      key="on_video_prayer_medium_light"
    >
      on_video_prayer_medium_light
    </p>
    <p
      key="on_video_prayer_medium"
    >
      on_video_prayer_medium
    </p>
    <p
      key="on_video_prayer_medium_dark"
    >
      on_video_prayer_medium_dark
    </p>
    <p
      key="on_video_prayer_dark"
    >
      on_video_prayer_dark
    </p>
    <p
      key="on_video_raise_hand_yellow"
    >
      on_video_raise_hand_yellow
    </p>
    <p
      key="on_video_raise_hand_light"
    >
      on_video_raise_hand_light
    </p>
    <p
      key="on_video_raise_hand_medium_light"
    >
      on_video_raise_hand_medium_light
    </p>
    <p
      key="on_video_raise_hand_medium"
    >
      on_video_raise_hand_medium
    </p>
    <p
      key="on_video_raise_hand_medium_dark"
    >
      on_video_raise_hand_medium_dark
    </p>
    <p
      key="on_video_raise_hand_dark"
    >
      on_video_raise_hand_dark
    </p>
  </div>
</ReactionKeys>
`;

exports[`<Reaction/> snapshot should match snapshot 1`] = `
<Reaction
  name="haha"
>
  <div
    className="md-reaction-wrapper md-icon-scales md-reaction-loading"
    data-scale={12}
  >
    <Animation
      data-name="haha"
      name="haha"
      onError={[Function]}
      onLoad={[Function]}
    >
      <mdc-animation
        data-name="haha"
        suppressHydrationWarning={true}
      />
    </Animation>
    <LoadingSpinner
      aria-hidden={true}
      scale={12}
      variant="button"
    >
      <div
        aria-hidden={true}
        className="md-loading-spinner-wrapper"
        role="img"
      >
        <Spinner
          inverted={false}
          style={
            Object {
              "--mdc-spinner-size": "0.75rem",
            }
          }
          variant="button"
        >
          <mdc-spinner
            style={
              Object {
                "--mdc-spinner-size": "0.75rem",
              }
            }
            suppressHydrationWarning={true}
          />
        </Spinner>
      </div>
    </LoadingSpinner>
  </div>
</Reaction>
`;

exports[`<Reaction/> snapshot should match snapshot with className 1`] = `
<Reaction
  className="example-class"
  name="haha"
>
  <div
    className="example-class md-reaction-wrapper md-icon-scales md-reaction-loading"
    data-scale={12}
  >
    <Animation
      data-name="haha"
      name="haha"
      onError={[Function]}
      onLoad={[Function]}
    >
      <mdc-animation
        data-name="haha"
        suppressHydrationWarning={true}
      />
    </Animation>
    <LoadingSpinner
      aria-hidden={true}
      scale={12}
      variant="button"
    >
      <div
        aria-hidden={true}
        className="md-loading-spinner-wrapper"
        role="img"
      >
        <Spinner
          inverted={false}
          style={
            Object {
              "--mdc-spinner-size": "0.75rem",
            }
          }
          variant="button"
        >
          <mdc-spinner
            style={
              Object {
                "--mdc-spinner-size": "0.75rem",
              }
            }
            suppressHydrationWarning={true}
          />
        </Spinner>
      </div>
    </LoadingSpinner>
  </div>
</Reaction>
`;

exports[`<Reaction/> snapshot should match snapshot with glyph not found if error 1`] = `
<Reaction
  name="haha"
>
  <div
    className="md-reaction-wrapper md-icon-scales md-reaction-loading"
    data-scale={12}
  >
    <Animation
      data-name="haha"
      name="haha"
      onError={[Function]}
      onLoad={[Function]}
    >
      <mdc-animation
        data-name="haha"
        suppressHydrationWarning={true}
      />
    </Animation>
    <LoadingSpinner
      aria-hidden={true}
      scale={12}
      variant="button"
    >
      <div
        aria-hidden={true}
        className="md-loading-spinner-wrapper"
        role="img"
      >
        <Spinner
          inverted={false}
          style={
            Object {
              "--mdc-spinner-size": "0.75rem",
            }
          }
          variant="button"
        >
          <mdc-spinner
            style={
              Object {
                "--mdc-spinner-size": "0.75rem",
              }
            }
            suppressHydrationWarning={true}
          />
        </Spinner>
      </div>
    </LoadingSpinner>
  </div>
</Reaction>
`;

exports[`<Reaction/> snapshot should match snapshot with id 1`] = `
<Reaction
  id="example-id"
  name="haha"
>
  <div
    className="md-reaction-wrapper md-icon-scales md-reaction-loading"
    data-scale={12}
  >
    <Animation
      data-name="haha"
      id="example-id"
      name="haha"
      onError={[Function]}
      onLoad={[Function]}
    >
      <mdc-animation
        data-name="haha"
        suppressHydrationWarning={true}
      />
    </Animation>
    <LoadingSpinner
      aria-hidden={true}
      scale={12}
      variant="button"
    >
      <div
        aria-hidden={true}
        className="md-loading-spinner-wrapper"
        role="img"
      >
        <Spinner
          inverted={false}
          style={
            Object {
              "--mdc-spinner-size": "0.75rem",
            }
          }
          variant="button"
        >
          <mdc-spinner
            style={
              Object {
                "--mdc-spinner-size": "0.75rem",
              }
            }
            suppressHydrationWarning={true}
          />
        </Spinner>
      </div>
    </LoadingSpinner>
  </div>
</Reaction>
`;

exports[`<Reaction/> snapshot should match snapshot with spinner while animation data is not defined 1`] = `
<Reaction
  name="haha"
>
  <div
    className="md-reaction-wrapper md-icon-scales md-reaction-loading"
    data-scale={12}
  >
    <Animation
      data-name="haha"
      name="haha"
      onError={[Function]}
      onLoad={[Function]}
    >
      <mdc-animation
        data-name="haha"
        suppressHydrationWarning={true}
      />
    </Animation>
    <LoadingSpinner
      aria-hidden={true}
      scale={12}
      variant="button"
    >
      <div
        aria-hidden={true}
        className="md-loading-spinner-wrapper"
        role="img"
      >
        <Spinner
          inverted={false}
          style={
            Object {
              "--mdc-spinner-size": "0.75rem",
            }
          }
          variant="button"
        >
          <mdc-spinner
            style={
              Object {
                "--mdc-spinner-size": "0.75rem",
              }
            }
            suppressHydrationWarning={true}
          />
        </Spinner>
      </div>
    </LoadingSpinner>
  </div>
</Reaction>
`;

exports[`<Reaction/> snapshot should match snapshot with style 1`] = `
<Reaction
  name="haha"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-reaction-wrapper md-icon-scales md-reaction-loading"
    data-scale={12}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <Animation
      data-name="haha"
      name="haha"
      onError={[Function]}
      onLoad={[Function]}
    >
      <mdc-animation
        data-name="haha"
        suppressHydrationWarning={true}
      />
    </Animation>
    <LoadingSpinner
      aria-hidden={true}
      scale={12}
      variant="button"
    >
      <div
        aria-hidden={true}
        className="md-loading-spinner-wrapper"
        role="img"
      >
        <Spinner
          inverted={false}
          style={
            Object {
              "--mdc-spinner-size": "0.75rem",
            }
          }
          variant="button"
        >
          <mdc-spinner
            style={
              Object {
                "--mdc-spinner-size": "0.75rem",
              }
            }
            suppressHydrationWarning={true}
          />
        </Spinner>
      </div>
    </LoadingSpinner>
  </div>
</Reaction>
`;
